force-app/main/default/objects/Job_Spec__c/Job_Spec__c.object-meta.xml
<CustomObject>
    <description>The Job specifications that a Candidate can apply for</description>
    <label>Job Spec</label>
    <nameField>
        <label>Job Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>