force-app/main/default/objects/Job_Spec__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Full description of the job responsibilities, duties, and expectations. This is typically visible in public listings.</description>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>