force-app/main/default/objects/Job_Spec__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The public-facing title for the role (e.g., “Salesforce Technical Architect”).</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>