force-app/main/default/objects/Job_Spec__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry Level</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Development Manager</fullName>
            </value>
            <value>
                <fullName>Solutions Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>