force-app/main/default/objects/Job_Spec__c/fields/Minimum_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Requirements__c</fullName>
    <description>Non-negotiable qualifications or criteria that candidates must meet to be considered (e.g., certifications, citizenship, degree).</description>
    <label>Minimum Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>