force-app/main/default/objects/Job_Spec__c/fields/Required_Experience__c.field-meta.xml
<CustomField>
    <fullName>Required_Experience__c</fullName>
    <description>Specific types or years of experience required for the role (e.g., “5+ years Salesforce project delivery experience”). Note that Candidate wont be automatically disqualified if they dont meet all requirements</description>
    <label>Required Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>