force-app/main/default/objects/Job_Spec__c/fields/Required_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Required_Qualifications__c</fullName>
    <description>Academic or professional credentials required (e.g., BSc Computer Science, Salesforce Admin Cert). Note that the candidate wont be automatically disqualified if they don&apos;t meet all requirements</description>
    <label>Required Qualifications</label>
    <type>TextArea</type>
</CustomField>