force-app/main/default/objects/Job_Spec__c/fields/Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>Required_Skills__c</fullName>
    <description>Technical or soft skills needed for the role (e.g., Apex, Agile, Communication, Jira).</description>
    <label>Required Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>